	  
	* popup configuration option pages are now only created when a popup
	  plugin is installed.
	  
	* small adjustments for minimum splitter position.
	
	- removed 7bit ansi check for outgoing messages. Now obsolete, because
	  of UTF-8 database storage format.
	  
	+ added support for History Events plugin by pescuma (patch submitted
	  by pescuma)
	  
	- removed useless help menu entries
	  
	  	  
Version 2.2.1.3  - 2008/04/XX
-----------------------------

	* for internal testing only (not officially released)
	
Version 2.2.1.2  - 2008/04/23
-----------------------------

	* increased limit of the time based "load previous events" feature.
	  It's now 24 hours instead of the 12 it was before. So the maximum
	  value you can enter on Message Log->Load previous events less than"
	  are 1440 minutes.
	  
	* various fixes by ghazan (compile fixes for VC 2003, msg timeout
	  fix and more)

	* added font service support (patch by Mad Cluster). All fonts must
	  now be set under Customize->Fonts->tabSRMM. The old font and color
	  dialog is gone.
	
	* the menu items for invoking the message log settings dialog (both
	  global and per contact) are now working. You can find them on the
	  Menu bar (Message Log popup) or by clicking the message log options
	  button on the tool bar.
	
	* Removed the Message Sessions->Customize node and replaced it with
	  a new dialog holding all group chat related options.
	  	  	  
Version 2.2.1.1  - 2008/04/10
-----------------------------

	* merged "MADMod" patch. This is a big contribution and adds several
	  new features like a fully customizable button bar and more. Also adds
	  old style typing notification popups (code taken from bio's old plugin),
	  support for animated .gif avatars and more.
	  
	  See: http://forums.miranda-im.org/showthread.php?t=17918
	  
	* New per contact message log settings are now almost complete and
	  working. Alt-B (RTL/LTR toggle has been restored).

	* bug fix for splitter position syncing
	